--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,36 @@
 cmake_minimum_required(VERSION 3.10)
 project(CN-ns3-project)
 
-# Add your simulation program
-add_executable(footballer-network-sim footballer-network-sim.cc)
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Link with ns-3 libraries
+# Find OpenCV
+find_package(OpenCV REQUIRED)
+
+# Include OpenCV directories
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+# Add your simulation program
+add_executable(footballer-network-sim 
+    footballer-network-sim.cc
+    image_classifier.cpp
+)
+
+# Link with ns-3 CMake targets and OpenCV
 target_link_libraries(footballer-network-sim
   PRIVATE
-    libns3.45-applications
-    libns3.45-internet
-    libns3.45-core
-    libns3.45-network
-    libns3.45-mobility
+    ns3::core
+    ns3::network
+    ns3::internet
+    ns3::applications
+    ns3::mobility
+    ns3::netanim
+    ns3::flow-monitor
+    ns3::point-to-point
+    ${OpenCV_LIBS}
 )
+
+# Print OpenCV information
+message(STATUS "OpenCV include dirs: ${OpenCV_INCLUDE_DIRS}")
+message(STATUS "OpenCV libraries: ${OpenCV_LIBS}")
